WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195441
imported/w3c/web-platform-tests/FileAPI/reading-data-section/filereader_error.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=195441
Summary
imported/w3c/web-platform-tests/FileAPI/reading-data-section/filereader_error...
Chris Dumez
Reported
2019-03-07 16:27:09 PST
imported/w3c/web-platform-tests/FileAPI/reading-data-section/filereader_error.html is a flaky crash: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 JavaScriptCore 0x000000010d540e60 WTFCrash + 16 1 com.apple.WebCore 0x000000011108793b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebCore 0x00000001132610c2 WebCore::FileReader::abort()::$_8::operator()(WebCore::ScriptExecutionContext&) const + 114 3 com.apple.WebCore 0x0000000113261024 WTF::Function<void (WebCore::ScriptExecutionContext&)>::CallableWrapper<WebCore::FileReader::abort()::$_8>::call(WebCore::ScriptExecutionContext&) + 52 4 com.apple.WebCore 0x00000001128fced0 WTF::Function<void (WebCore::ScriptExecutionContext&)>::operator()(WebCore::ScriptExecutionContext&) const + 192 5 com.apple.WebCore 0x00000001128e9edd WebCore::ScriptExecutionContext::Task::performTask(WebCore::ScriptExecutionContext&) + 29 6 com.apple.WebCore 0x0000000112fc8378 WebCore::Document::postTask(WebCore::ScriptExecutionContext::Task&&)::$_3::operator()() + 312 7 com.apple.WebCore 0x0000000112fc8199 WTF::Function<void ()>::CallableWrapper<WebCore::Document::postTask(WebCore::ScriptExecutionContext::Task&&)::$_3>::call() + 25 8 JavaScriptCore 0x000000010d567fcd WTF::Function<void ()>::operator()() const + 173 9 JavaScriptCore 0x000000010d59666d WTF::dispatchFunctionsFromMainThread() + 365 10 JavaScriptCore 0x000000010d5993c5 -[JSWTFMainThreadCaller call] + 21 11 com.apple.Foundation 0x00000001022a3f27 __NSThreadPerformPerform + 330 12 com.apple.CoreFoundation 0x000000010326cb91 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 13 com.apple.CoreFoundation 0x000000010326c403 __CFRunLoopDoSources0 + 243 14 com.apple.CoreFoundation 0x0000000103266aaf __CFRunLoopRun + 1263 15 com.apple.CoreFoundation 0x0000000103266281 CFRunLoopRunSpecific + 625 16 com.apple.Foundation 0x000000010228e5ce -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 277 17 com.apple.Foundation 0x000000010228e73e -[NSRunLoop(NSRunLoop) run] + 76 18 libxpc.dylib 0x000000010971ea5e _xpc_objc_main + 460 19 libxpc.dylib 0x0000000109720f09 xpc_main + 143 20 com.apple.WebKit.WebContent 0x000000010213cbfe main + 894 21 libdyld.dylib 0x000000010948a729 start + 1
Attachments
Patch
(4.89 KB, patch)
2019-03-07 16:33 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-03-07 16:27:28 PST
<
rdar://problem/43437394
>
Chris Dumez
Comment 2
2019-03-07 16:33:46 PST
Created
attachment 363954
[details]
Patch
Alexey Proskuryakov
Comment 3
2019-03-07 17:41:06 PST
Comment on
attachment 363954
[details]
Patch Are there any TestExpectations to remove?
Chris Dumez
Comment 4
2019-03-08 08:35:32 PST
(In reply to Alexey Proskuryakov from
comment #3
)
> Comment on
attachment 363954
[details]
> Patch > > Are there any TestExpectations to remove?
I grep'd and it does not look like this test had been added to TestExpectations yet.
WebKit Commit Bot
Comment 5
2019-03-08 09:02:21 PST
Comment on
attachment 363954
[details]
Patch Clearing flags on attachment: 363954 Committed
r242641
: <
https://trac.webkit.org/changeset/242641
>
WebKit Commit Bot
Comment 6
2019-03-08 09:02:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug