Source/WebCore/fileapi/FileReader.cpp
@@ -64,8 +64,7 @@ FileReader::~FileReader()
 
 bool FileReader::canSuspendForDocumentSuspension() const
 {
-    // FIXME: It is not currently possible to suspend a FileReader, so pages with FileReader can not go into page cache.
-    return false;
+    return !hasPendingActivity();
 }
 
 const char* FileReader::activeDOMObjectName() const
@@ -80,6 +79,7 @@ void FileReader::stop()
         m_loader = nullptr;
     }
     m_state = DONE;
+    m_loadingActivity = nullptr;
 }
 
 ExceptionOr<void> FileReader::readAsArrayBuffer(Blob* blob)
@@ -129,7 +129,7 @@ ExceptionOr<void> FileReader::readInternal(Blob& blob, FileReaderLoader::ReadTyp
     if (m_state == LOADING)
         return Exception { InvalidStateError };
 
-    setPendingActivity(*this);
+    m_loadingActivity = makePendingActivity(*this);
 
     m_blob = &blob;
     m_readType = type;
@@ -153,7 +153,10 @@ void FileReader::abort()
     m_aborting = true;
 
     // Schedule to have the abort done later since abort() might be called from the event handler and we do not want the resource loading code to be in the stack.
-    scriptExecutionContext()->postTask([this] (ScriptExecutionContext&) {
+    scriptExecutionContext()->postTask([this, protectedThis = makeRef(*this)] (ScriptExecutionContext&) {
+        if (isContextStopped())
+            return;
+
         ASSERT(m_state != DONE);
 
         stop();
@@ -164,9 +167,6 @@ void FileReader::abort()
         fireEvent(eventNames().errorEvent);
         fireEvent(eventNames().abortEvent);
         fireEvent(eventNames().loadendEvent);
-
-        // All possible events have fired and we're done, no more pending activity.
-        unsetPendingActivity(*this);
     });
 }
 
@@ -200,8 +200,7 @@ void FileReader::didFinishLoading()
     fireEvent(eventNames().loadEvent);
     fireEvent(eventNames().loadendEvent);
     
-    // All possible events have fired and we're done, no more pending activity.
-    unsetPendingActivity(*this);
+    m_loadingActivity = nullptr;
 }
 
 void FileReader::didFail(int errorCode)
@@ -217,8 +216,7 @@ void FileReader::didFail(int errorCode)
     fireEvent(eventNames().errorEvent);
     fireEvent(eventNames().loadendEvent);
     
-    // All possible events have fired and we're done, no more pending activity.
-    unsetPendingActivity(*this);
+    m_loadingActivity = nullptr;
 }
 
 void FileReader::fireEvent(const AtomicString& type)
